# Python-Library-Template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/docker/: entrypoint.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  logging.py  main.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
